# code-explorer

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  INSTALLATION_UBUNTU.md  MODERNIZATION.md  REACT_SOURCE_GRAPH_NAVIGATION.md  README.fr.md  README.md  build-nexus-suite.bat  build-release.bat  build-release.sh  check-gitnexus.cmd  config-chatgpt.cmd  doctor-gitnexus.cmd  gitnexus.cmd  login-chatgpt.cmd  start-chat-react.cmd  start-desktop.cmd  test-chatgpt.cmd
chat-ui/: CLAUDE.md  (+9 more)
crates/code-explorer-desktop/: Cargo.toml  UI_MOCKUP.jsx  UI_SPECS.md  tauri.conf.json
crates/code-explorer-desktop/src/: main.rs  state.rs  types.rs
crates/code-explorer-desktop/src/commands/: activity.rs  bookmarks.rs  chat.rs  chat_executor.rs  chat_planner.rs  code_review.rs  comments.rs  context.rs  coverage.rs  cypher.rs  dashboards.rs  diagram.rs  docs.rs  export.rs  feature_dev.rs  files.rs  git_analytics.rs  graph.rs  health.rs  html_export.rs  impact.rs  inventory.rs  notebooks.rs  process.rs  quality.rs  rename.rs  repos.rs  repos_overview.rs  saved_queries.rs  saved_views.rs  search.rs  shared.rs  simplify.rs  snapshots.rs  user_commands.rs  wiki.rs  workflows.rs
crates/code-explorer-desktop/ui/: index.html  playwright.html-only.config.ts
crates/code-explorer-desktop/ui/.omc/state/: last-tool-error.json
crates/code-explorer-desktop/ui/e2e/: deepwiki.spec.ts  html-wiki.spec.ts  new-panels.spec.ts  smoke.spec.ts
crates/code-explorer-desktop/ui/scripts/: screenshot-audit.mjs
crates/code-explorer-desktop/ui/src/: index.css  main.tsx
crates/code-explorer-desktop/ui/src/components/analyze/: AnalyzeNav.tsx  ClonesView.tsx  ComplexityView.tsx  CyclesView.tsx  EndpointsView.tsx  EnvVarsView.tsx  ProcessFlowsView.tsx  SchemaView.tsx  SnapshotsPanel.tsx  TodosView.tsx
crates/code-explorer-desktop/ui/src/components/chat/: ChatMarkdown.tsx  ChatMessage.tsx  ChatMode.tsx  ChatPanel.tsx  ChatSearch.tsx  ChatSettings.tsx  ChatSuggestions.tsx
crates/code-explorer-desktop/ui/src/hooks/: use-keyboard-shortcuts.ts  use-screen-capture.ts  use-sigma.ts
crates/code-explorer-desktop/ui/src/lib/: graph-adapter.ts  i18n.ts  mock-data.ts  tauri-commands.ts  tauri-env.ts
crates/code-explorer-desktop/ui/src/stores/: app-store.ts  chat-session-store.ts  saved-views-store.ts
crates/code-explorer-lang/: Cargo.toml
crates/code-explorer-lang/src/: component_detection.rs  entry_point_scoring.rs  provider.rs  registry.rs
crates/code-explorer-lang/src/import_resolvers/: standard.rs  types.rs  utils.rs
crates/code-explorer-lang/src/languages/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  php.rs  python.rs  razor.rs  ruby.rs  rust_lang.rs  swift.rs  typescript.rs
crates/code-explorer-lang/src/named_bindings/: types.rs  typescript.rs
crates/code-explorer-lang/src/queries/: javascript.rs  kotlin.rs  typescript.rs
crates/code-explorer-lang/src/route_extractors/csharp/: external.rs  types.rs
crates/code-explorer-lang/src/type_extractors/: mod.rs  types.rs
crates/code-explorer-mcp/: Cargo.toml
crates/code-explorer-mcp/src/: error.rs  hints.rs  llm_config.rs  resources.rs  server.rs
crates/code-explorer-mcp/src/backend/: local.rs
crates/code-explorer-mcp/src/tools/: definitions.rs
crates/code-explorer-mcp/src/transport/: http.rs  native-print-pdf.js
crates/code-explorer-query/: Cargo.toml
crates/code-explorer-query/src/: executor.rs  lib.rs
crates/code-explorer-rag/: Cargo.toml
crates/code-explorer-rag/src/: chunker.rs  docx.rs  lib.rs  sfd.rs  validator.rs
(+247 files in other folders)
