[package]
name = "code-explorer-query"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Code Query Language (CQL) parser and executor for Code Explorer"

[dependencies]
code-explorer-core.workspace = true
pest = { workspace = true }
pest_derive = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
