[package]
name = "code-explorer-rag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
pulldown-cmark = "0.9"
base64 = "0.22"
# DOCX ingestion (Open XML = ZIP + XML)
zip.workspace = true
quick-xml = "0.38"

[dev-dependencies]
tempfile = "3"
